# Popper

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  test-output.txt  tsconfig.json  vite.config.js
src/: App.vue  main.ts  platform.ts  style.css
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json  window.json
src-tauri/src/: main.rs  wallpaper.rs
src/__tests__/: App.test.js  gameStore.test.js  setup.js
src/components/: FlyoutPanel.vue
src/components/preferences/: PreferenceFieldRenderer.vue  PreferenceFlyout.vue  PreferenceSectionIcon.vue  PreferenceSidebar.vue  PreferenceTabPanel.vue
src/components/preferences/fields/: PreferenceHotkeyField.vue  PreferenceListManager.vue
src/composables/: useAutoHide.ts  useFlyouts.ts
src/composables/preferences/: useAppliedPreferences.ts  usePreferenceControls.ts  usePreferenceHotkeys.ts  usePreferenceSavedState.ts
src/data/preferences/: preference.constants.ts  preference.defaults.ts  preference.registry.ts  preference.tabs.ts
src/lib/: flyoutLayout.ts  installMacAppMenu.ts  wallpaperPalette.ts
src/stores/: gameStore.js  gameStore.ts  preferenceStore.ts
src/types/: preference.types.ts
src/utils/preferences/: preferenceExportImport.ts  preferenceMigrations.ts  preferencePersistence.ts  preferenceSync.ts  preferenceValidation.ts
