[package]
name = "popper-game"
version = "0.1.0"
description = "A simple button popper game"
authors = ["Laura"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["protocol-asset"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-process = "2"
wallpaper = "3.2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[package.metadata.tauri]
